finished additions to OCDN paper

--- a/usenix/background.tex
+++ b/usenix/background.tex
@@ -46,7 +46,7 @@ to learn an enormous amount of information.  CDN providers know information abou
 access data stored at the CDN, information about all content publishers that cache content at 
 CDN edge servers, and information about the content itself.
 
-\paragraph{Content}  CDNs, by nature, have access to all content that they distribute,
+\paragraph{Content.}  CDNs, by nature, have access to all content that they distribute,
 as well as 
 the corresponding URL.  First, the CDN must use the URL, which is not 
 encrypted or hidden, to locate and serve the content. Therefore, it is evident that
@@ -77,7 +77,7 @@ public and private keys, as well as certificates associated with the content it 
 %remove safe harbor protections for some CDNs if they do not employ automated detection
 %techniques for removing copyrighted content~\cite{eu-copyright}.
 
-\paragraph{Client information} Clients retrieve content directly from the
+\paragraph{Client information.} Clients retrieve content directly from the
 CDN's edge servers, which reveals
 information about the client's location and what the client is accessing.  
 CDNs can also see each client's cross-site browsing patterns: CDNs host content
@@ -92,7 +92,7 @@ these National Security Letters
 demanded information collected by the CDN and also included a gag order, which prohibits
 the CDN from publicly announcing the information request.  
 
-\paragraph{Content publisher information} A CDN must know information
+\paragraph{Content publisher information.} A CDN must know information
 about their customers, the content
 publishers; the CDN keeps track of who the content publisher is and 
 what the publisher's content is.  The combination of the CDN seeing all content in plaintext and the content's 
@@ -114,7 +114,7 @@ In the following section, we highlight some of these cases, which all point to a
 that they distribute, CDNs may be burdened with the legal responsibility for the
 actions of their customers and clients.
 
-\paragraph{User Data Requests}
+\paragraph{User Data Requests.}
 There are numerous open questions in the legal realm regarding which government can request data stored in different countries, which 
 has led to much uncertainty.  A series of recent events have illustrated this uncertainty.  In the struggle over government access to 
 user data, cases such as {\it Microsoft vs. United States} (often known as the ``Microsoft Ireland Case'') concerns whether the United 
@@ -126,7 +126,7 @@ that the government agency ``collected information `by exploiting inherent
 weaknesses in Facebook's security model' through its use of the popular Akamai content
 delivery network''~\cite{facebook_surv}.
 
-\paragraph{Intermediary Liability}
+\paragraph{Intermediary Liability.}
 More recently, questions on intermediary liability have been in the spotlight.  For example, many groups, including the Recording Industry 
 Association of America (RIAA) and the Motion Picture Association of America (MPAA), have started targeting CDNs with takedown notices for 
 content that allegedly infringes on copyright, trademarks, and patent rights; CDNs are a more convenient target of these takedown notices than 
