--- a/usenix/threat_model.tex
+++ b/usenix/threat_model.tex
@@ -69,7 +69,7 @@ and the client, whereas existing systems, such as Tor, only protect the client.
 %\label{tab:design_goals}
 %\end{table*}
 
-\paragraph{Prevent the CDN from knowing the content it is caching} First and foremost, the CDN 
+\paragraph{Prevent the CDN from knowing the content it is caching.} First and foremost, the CDN 
 should not have access to the information outlined 
 in Section~\ref{sec:background}.  By limiting the information that the CDN knows,
 \system{} limits 
@@ -79,7 +79,7 @@ does not know what content it is caching, then the CDN will not be able to suppl
 with the requested data and it will have a strong argument as to why it cannot be held 
 liable for its customers' content.
 
-\paragraph{Prevent the CDN from knowing the identity of users accessing content} CDNs can currently see clients' 
+\paragraph{Prevent the CDN from knowing the identity of users accessing content.} CDNs can currently see clients' 
 browsing patterns. \system{} should provide privacy protections by hiding which client is accessing 
 which content at the CDN.  In addition, it should hide cross-site browsing patterns,
 which a CDN 
