added some of Paul's comments

--- a/usenix/related_work.tex
+++ b/usenix/related_work.tex
@@ -50,15 +50,15 @@ Recently, researchers have studied the privacy implications of peer-assisted CDN
 content on behalf of a website.  It is starting to be supported by CDNs, such as Akamai, but the design of the paradigm
 makes clients susceptible to privacy attacks; one client can infur the cross site browsing patterns of another client~\cite{jia2016anonymity}.\\
 
-\paragraph{Measuring and Mapping CDNs.} As CDNs have increased in popularity, and are predicted to grow even more~\cite{predict}, much research has 
-studied the deployment of CDNs.  Huang et al., have mapped the locations of servers, and evaluated the server availability for two CDNs: 
-Akamai and Limelight~\cite{huang2008measuring}.  More recently, Calder et al., mapped Google's infrastructure; this included 
-developing techniques for mapping, enumerating the IP addresses of servers, and identifying associations between clients and clusters of 
-servers~\cite{calder2013mapping}. Scott et al., develop a clustering technique to identify the IP footprints of CDN deployments; this analysis
- also analyzes network-level interference to aid in the identification of CDN deployments~\cite{scott2016satellite}.  In 2017, researchers 
-conducted an empirical study of CDN deployment in China; they found that it is significantly different than in other parts of the world 
-due to their unique economic, technical, and regulatory factors~\cite{xue2017cdns}. 
+%\paragraph{Measuring and Mapping CDNs.} As CDNs have increased in popularity, and are predicted to grow even more~\cite{predict}, much research has 
+%studied the deployment of CDNs.  Huang et al., have mapped the locations of servers, and evaluated the server availability for two CDNs: 
+%Akamai and Limelight~\cite{huang2008measuring}.  More recently, Calder et al., mapped Google's infrastructure; this included 
+%developing techniques for mapping, enumerating the IP addresses of servers, and identifying associations between clients and clusters of 
+%servers~\cite{calder2013mapping}. Scott et al., develop a clustering technique to identify the IP footprints of CDN deployments; this analysis
+% also analyzes network-level interference to aid in the identification of CDN deployments~\cite{scott2016satellite}.  In 2017, researchers 
+%conducted an empirical study of CDN deployment in China; they found that it is significantly different than in other parts of the world 
+%due to their unique economic, technical, and regulatory factors~\cite{xue2017cdns}. 
 
-Other measurement studies on CDNs have focused on characterizing and quantifying flash crowds on CDNs~\cite{wendell2011going}, inferring 
-and using network measurements performed by a large CDN to identify quality Internet paths~\cite{su2009drafting}, and measuring object size distributions and 
-request characteristics to optimize caching policies~\cite{berger2017adaptsize}.
+%Other measurement studies on CDNs have focused on characterizing and quantifying flash crowds on CDNs~\cite{wendell2011going}, inferring 
+%and using network measurements performed by a large CDN to identify quality Internet paths~\cite{su2009drafting}, and measuring object size distributions and 
+%request characteristics to optimize caching policies~\cite{berger2017adaptsize}.
