more of Paul's comments

--- a/usenix/design.tex
+++ b/usenix/design.tex
@@ -223,7 +223,7 @@ latency for sending the response to the client.
 \subsection{Incentives for Running \system{}}
 As described in Sections \ref{sec:hiding_content} and \ref{sec:hiding_clients}, \system{} relies 
 on the use of a system of proxies.  These include: 1) client proxies, and 2) exit proxies.  For a client 
-to joing the system, they must also run client proxy on his/her machine.  On the other hand, there is no 
+to join the system, they must also run client proxy on his/her machine.  On the other hand, there is no 
 requirement for a client, organization, or company to run an exit proxy; despite this lack of requirement, we 
 believe that both clients and companies have enough incentives to run an exit proxy (or multiple exit proxies).  
 Clients benefit from running an exit proxy because it allows \system{} to perform better in terms of both 
