--- a/usenix/performance.tex
+++ b/usenix/performance.tex
@@ -49,7 +49,7 @@ grows more quickly than TTFB as the file size and latency increase.
 \begin{figure}[t!]
 \centering
 \includegraphics[width=.5\textwidth]{Latency_withzero}
-\caption{Time to First Byte and time to complete a request with varying the file size and latency; this latency 
+\caption{Time to first byte and time to complete a request with varying the file size and latency; this latency 
 correspondes to $\alpha$ in Figure \ref{fig:impl}.}
 \label{fig:latency}
 \end{figure}
